--- a/PUBLIC/Main.html
+++ b/PUBLIC/Main.html
@@ -24,7 +24,7 @@
     <div class="container-fluid">
 
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
+        <a class="navbar-brand" href="#">Node based app</a>
       </div>
 
       <ul class="nav navbar-nav">
