Last Commit (Finished on 31/03/2021 18:17)

--- a/PUBLIC/Home.html
+++ b/PUBLIC/Home.html
@@ -28,8 +28,8 @@
           <ul class="nav navbar-nav">
             <li><a href="#">Home  </a></li>
             <li><a href="./Main.html">Main</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contacts</a></li>
+            <li><a href="./getPugFile">Pug</a></li>
+            <li><a href="https://html-to-pug.com/">Convert HTML to Pug</a></li>
           </ul>
         </div>
       </nav>
