--- a/PUBLIC/Main.html
+++ b/PUBLIC/Main.html
@@ -30,8 +30,11 @@
       <ul class="nav navbar-nav">
         <li><a href="./Home.html">Home </a></li>
         <li><a href="#">Main</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contacts</a></li>
+        <!-- <li><a href="./PugFile_Original.html">Pug</a></li> -->
+
+        <li><a href="./getPugFile">Pug</a></li>
+
+        <li><a href="https://html-to-pug.com/">Convert HTML to Pug</a></li>
       </ul>
     </div>
   </nav>
